# nanna-coder

./: .envrc  .gitignore  .markdownlint.yaml  .rumdl.toml  .shellcheckrc  .yamllint.yml  AGENTIC-SECURITY.md  AGENTS.md  ARCHITECTURE.md  CACHIX_SETUP.md  CLAUDE.md  COMMIT_MESSAGE.txt  COMPLETION_REPORT.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  MIGRATION_SUMMARY.md  README.md  ROADMAP.md  TESTING.md  auto-issue-pr.sh  deny.toml  flake.nix  marigold-pr-90-conflict-resolution.patch  taplo.toml  tarpaulin.toml  test-agentic-security.sh
.cargo-husky/hooks/: pre-commit
.claude/hooks/: session-start.sh
.github/workflows/: badges.yaml  cache-migration-test.yml  cache-warming.yml  ci.yml  debug-nix.yml  enterprise-simplified.yml  kani.yml  test-minimal.yml
docs/: CACHE_STRATEGY.md  agent-evaluation-patterns.md  binary-cache-strategy.md  cache-migration-guide.md  cachix-migration.md  ci-cd-pipeline.md  container-loading.md  developer-experience.md  poc-system-overview.md  test-execution-examples.md
framing/: ci-caching.md  eval-suite-decomposition.md  nix-packaging.md  nix-vuln-scanning.md  podman-nix-vuln-scanning.md  reproducibility-recs.md
github-workflows-staging/: eval.yml
harness/: Cargo.toml
harness/examples/: prompts_usage.rs
harness/src/: agent.rs  auth.rs  container.rs  entity.rs  lib.rs  lifecycle.rs  main.rs  monitoring.rs  observability.rs  output.rs  task.rs  telemetry.rs  tools.rs  workspace.rs
harness/src/agent/: decision.rs  enrichment.rs  entity.rs  eval.rs  eval_case.rs  mod.rs  modification.rs  prompts.rs  rag.rs
harness/src/entities/: mod.rs  store_tests.rs
harness/src/entities/ast/: mod.rs  types.rs
harness/src/entities/context/: mod.rs  types.rs
harness/src/entities/env/: mod.rs  types.rs
harness/src/entities/git/: mod.rs  operations.rs  presentation.rs  types.rs
harness/src/entities/telemetry/: mod.rs  types.rs
harness/src/entities/test/: mod.rs  store.rs  types.rs
harness/src/eval/: mod.rs  report.rs  runner.rs  swebench.rs  swebench_report.rs
harness/src/mcp/: handlers.rs  http.rs  mod.rs
harness/src/onboarding/: detect.rs  flake_template.rs  mod.rs  profile.rs
harness/src/tools/: calculator.rs  echo.rs  filesystem.rs  git.rs  github.rs  mod.rs  registry.rs  search.rs  shell.rs  utility.rs
harness/tests/: agent_state_machine_tests.rs  agent_tests.rs  auth_security_tests.rs  dev_container_integration.rs  entity_store_tests.rs  entity_unit_tests.rs  eval_case_tests.rs  eval_runner_tests.rs  github_pr_status_integration.rs  integration_tests.rs  nanna_self_dev_integration.rs  onboarding_integration.rs  smoke_mcp_install.rs
harness/tests/common/: mod.rs
image-builder/: Cargo.toml
image-builder/src/: lib.rs  nix_builder.rs  validate_tests.rs
model/: Cargo.toml
model/src/: anthropic.rs  anthropic_config.rs  config.rs  judge.rs  lib.rs  ollama.rs  openai_compat.rs  provider.rs  types.rs  types_extended_tests.rs  vllm.rs
model/tests/: judge_tests.rs  judge_unit_tests.rs  ollama_chat_integration.rs  types_serde_tests.rs
nix/: apps.nix  cache.nix  configs.nix  container-config.nix  containers.nix  cross-compilation.nix  dev-shell.nix  gpu-support.nix  packages.nix  scripts.nix
scripts/: build-multiarch.sh  build.sh  deploy.sh  pod-setup.sh  setup-dev.sh  swebench-instances.txt  test-containers.sh
scripts/hooks/: security-review.sh
tests/: cachix_integration_test.sh  integration_tests.rs  run-all-tests.sh
tests/integration/: test-build-system.sh  (+1 more)
(+21 files in other folders)
