[workspace]
resolver = "3"
members = [
    "image-builder",
    "model",
    "harness",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Dominic Burkart"]
description = "AI-powered coding assistant with tool calling and multi-model support"
repository = "https://github.com/DominicBurkart/nanna-coder"

[workspace.metadata.crane]
name = "nanna-coder"

[workspace.dependencies]