[package]
name = "harness"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Test harness and CLI for nanna-coder AI assistant"
repository.workspace = true

[[bin]]
name = "harness"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
clap = { version = "4.0", features = ["derive"] }
image-builder = { path = "../image-builder" }
model = { path = "../model" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
futures = "0.3"