[package]
name = "image-builder"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Container image building utilities for nanna-coder"
repository.workspace = true

[lib]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }