[package]
name = "model"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AI model abstraction and provider implementations for nanna-coder"
repository.workspace = true

[lib]

[features]
default = ["ollama"]
ollama = ["dep:ollama-rs"]

[dependencies]
async-trait = "0.1"
futures = "0.3"
ollama-rs = { version = "0.2", optional = true }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full", "time"] }
tracing = "0.1"
# Additional dependencies for validation framework
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"